總名冊 不用依訂單日期排序

--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -46,7 +46,7 @@
             <button type="button" ng-click="DownLoadExcel_ShuWenPrint()">
                 <i class="fa fa-print"></i>個別、歷代祖先 疏文
             </button>
-            <label class="text-center" style="color:red">備註：名冊、總名冊、金紙疏文、牒文、個別歷代祖先疏文 Excel依訂單日期排序。</label>
+            <label class="text-center" style="color:red">備註：總名冊 Excel依祈福燈位排序;名冊、金紙疏文、牒文、個別歷代祖先疏文 Excel依訂單日期排序。</label>
         </fieldset>
        
     </form>
