1.祈福許願燈增加備註欄位 2.福登無法點燈問題

--- a/P/Work.WebApp/Views/Orders/Index.cshtml
+++ b/P/Work.WebApp/Views/Orders/Index.cshtml
@@ -994,6 +994,14 @@
                     </td>
                 </tr>
                 <tr>
+                    <th style="width:15%">
+                        備註
+                    </th>
+                    <td colspan="3">
+                        <input type="text" ng-model="cart.wish_memo" maxlength="500" />
+                    </td>
+                </tr>
+                <tr>
                     <th>去年點燈種類</th>
                     <td colspan="3">
                         <table class="table-detail">
