契子會員註記改在別的地方顯示

--- a/P/Work.WebApp/Views/Orders/Index.cshtml
+++ b/P/Work.WebApp/Views/Orders/Index.cshtml
@@ -178,7 +178,7 @@
         <div class="dialog-div">
             <table>
                 <caption>
-                    資料編輯
+                    資料編輯<span ng-show="is_godson" style="color:red;text-align:center; margin:0 auto;">(契子)</span>
                     <button type="button" ng-click="SubmitCart()" ng-disabled="isViewWorking">新　增</button>
                     <button type="button" ng-click="CloseEditProduct()">關　閉</button>
                     <button type="button" ng-click="ShowOrderDetail()">查 去 年</button>
@@ -482,7 +482,7 @@
         <div class="dialog-div">
             <table>
                 <caption>
-                    資料編輯
+                    資料編輯<span ng-show="is_godson" style="color:red;text-align:center; margin:0 auto;">(契子)</span>
                     <button type="button" ng-click="SubmitCart()" ng-disabled="isViewWorking">新　增</button>
                     <button type="button" ng-click="CloseEditProduct()">關　閉</button>
                     <button type="button" ng-click="ShowOrderDetail()">查 去 年</button>
@@ -678,7 +678,7 @@
         <div class="dialog-div">
             <table>
                 <caption>
-                    資料編輯
+                    資料編輯<span ng-show="is_godson" style="color:red;text-align:center; margin:0 auto;">(契子)</span>
                     <button type="button" ng-click="SubmitCart()" ng-disabled="isViewWorking">新　增</button>
                     <button type="button" ng-click="CloseEditProduct()">關　閉</button>
                     <button type="button" ng-click="ShowOrderDetail()">查 去 年</button>
@@ -881,7 +881,7 @@
         <div class="dialog-div">
             <table>
                 <caption>
-                    資料編輯
+                    資料編輯<span ng-show="is_godson" style="color:red;text-align:center; margin:0 auto;">(契子)</span>
                     <button type="button" ng-click="SubmitCart()" ng-disabled="isViewWorking">新　增</button>
                     <button type="button" ng-click="CloseEditProduct()">關　閉</button>
                     <button type="button" ng-click="ShowOrderDetail()">查 去 年</button>
